# deploy

./: manifest.json
backend/: main.py  manifest.json  pyproject.toml
backend/app/: __init__.py  app.py  config.py  help.md  module.py  utils.py
backend/app/models/: __init__.py  structure.py
backend/app/modules/: __init__.py  utils.py
backend/app/modules/module/: module.py
backend/app/routes/: __init__.py  get.py  post.py
backend/tests/: test_module.py  test_routes.py
frontend/: .gitignore  LICENSE.txt  README.md  manifest.json  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/backend/: route.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/backend/: route.ts
frontend/src/app/fetching/: route.ts
frontend/src/manifesto/: collect.ts  components.tsx  logging.ts  manifest.ts  structures.json  style.css  style.ts  system.ts  tailwind.css  types.ts
frontend/src/manifesto/frontend/: collection.tsx  components.tsx  constructors.ts  registry.ts  structures.json  style.css  types.ts  utils.ts
frontend/src/manifesto/nextjs/: actions.ts  auth.ts  collection.tsx  components.tsx  constructors.ts  deepmerge.js  operations.ts  parsing.ts  registry.ts  structures.json  structures.ts  style.css  style.ts  types.ts  utils.ts
frontend/src/manifesto/server_child2/: collection.tsx  components.tsx  constructors.ts  registry.ts  style.css
frontend/src/manifesto/server_child4/: collection.tsx  components.tsx  constructors.ts  registry.ts  types.ts  utils.ts
frontend/src/manifesto/web/: Style.css  collection.tsx  (+6 more)
(+4 files in other folders)
